--- a/homework/hw2-multicol/style.css
+++ b/homework/hw2-multicol/style.css
@@ -2,28 +2,46 @@
 font-family: 'Poppins', sans-serif;
 font-family: 'Inknut Antiqua', serif;
 */
+@import url(https://fonts.googleapis.com/css?family=Inknut+Antiqua:900|Poppins:400,500,600&display=swap);
+
+
+body {
+  background-color: #c98a0a;
+}
+
+div {
+  background-color: #dad9a6;
+}
+
+span {
+  background-color: #f18973;
+}
+
 h1 {
-  position: 'center;'
+
 font-family: 'Inknut Antiqua', serif;
 font-weight: 900;
-font-size:4em;
+font-size:400%;
+color: #dad9a6;
+text-align: center;
 }
 body {
   font-family: 'Poppins', sans-serif;
+  color: #78744c;
+  text-align:center;
+  font-size: 120%;
 }
-
 .grid-demo section {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  display: column;
+  grid-template-columns: 2fr repeat(2, 2fr);
+  grid-template-rows: 1fr 1fr 1fr ;
   grid-gap:20px;
+  padding: 20px;
 }
 .grid-demo div {
-  border:1px solid;
-  padding:20px;
-}
-.grid-demo .feature{
-  grid-column: 2/4;
-  grid-row: 1/3;
-  font-weight:200;
-
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  padding-bottom:10px;
 }
